Add video support on home view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <!-- Contact Us -->
     <string name="contact_name">Name</string>
     <string name="contact_email">Email</string>
-    <string name="contact_phone">Phone #</string>
+    <string name="contact_phone">Phone Number</string>
     <string name="contact_message">Message</string>
 
     <!-- Events -->
