--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
 
     <!-- Menus -->
     <string name="title_home">Home</string>
-    <string name="title_help">Patronize</string>
+    <string name="title_contact">Patronize</string>
     <string name="title_donate">Donate</string>
-    <string name="title_contact">Contact</string>
+    <string name="title_help">Detach</string>
     <string name="title_events">Events</string>
 
     <!-- Home -->
@@ -14,16 +14,18 @@
     <string name="home_cuidado_sub">and we have right tools to help.</string>
 
     <string name="home_video_descr">Video about Heirs of the Furute</string>
+
+
     <!-- Patronize -->
-
-    <!-- Donate -->
-
-    <!-- Contact Us -->
     <string name="contact_title">Patronize a child</string>
     <string name="contact_subtitle">Fill the form to know more about</string>
     <string name="contact_name">Name</string>
     <string name="contact_phone">Phone Number</string>
     <string name="contact_message">Message</string>
+
+    <!-- Donate -->
+
+    <!-- Detach -->
 
     <!-- Events -->
     <string name="events_available">Available Events</string>
