--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -35,7 +35,7 @@
     <string name="title_home">Inicio</string>
     <string name="currency">R$</string>
     <string name="donate_title">SEJA UM REALIZADOR DE SONHOS</string>
-    <string name="donate_subtitle">Ajude nossas crianças com alguma doação.</string>
+    <string name="donate_subtitle">Ajude nossas crianças doando.</string>
     <string name="connect_error">Erro de Conexão!</string>
     <string name="read_error">Erro de leitura!</string>
 </resources>
