--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -38,4 +38,5 @@
     <string name="donate_subtitle">Ayude a nuestros hijos con alguna donación.</string>
     <string name="connect_error">!Error de conexión!</string>
     <string name="read_error">¡Error de lectura!</string>
+    <string name="sending">Enviando...</string>
 </resources>
