--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,10 @@
     <string name="home_cuidado_sub">and we have right tools to help them.</string>
 
 
+    <!-- Contact -->
+    <string name="sending">Sending...</string>
+
+
     <!-- Patronize -->
     <string name="contact_title">Patronize a child</string>
     <string name="contact_subtitle">Fill the form to know more about</string>
