--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -30,7 +30,7 @@
     <string name="donate_title">SEJA UM REALIZADOR DE SONHOS</string>
     <string name="donate_subtitle">Ajude nossas crianças doando.</string>
     <string name="connect_error">Erro de Conexão!</string>
-    <string name="events_share">Olá a todos, no dia %1$s às %2$s ocorrerá um evento super importante:\\n\\n \\\"%3$s\\\" \\n\\n Segue a descrição\\: \\n\\n\\n %4$s \\n\\n\\n Conto com a sua presença!</string>
+    <string name="events_share">Olá a todos, no dia %1$s às %2$s ocorrerá um evento super importante:\n\n \"%3$s\" \n\n Segue a descrição\: \n\n\n %4$s \n\n\n Conto com a sua presença!</string>
     <string name="no_detach_items"></string>
     <string name="home_cuidado">Eles precisam do nosso cuidado!</string>
     <string name="home_cuidado_sub">e nos temos as ferramentas adequadas.</string>
